# qrcode

./: README.md  pyproject.toml  requirements.txt  setup.py
src/: main.py  qr_class.py
src/utils/: write_text_to_image.py
